--- a/practice-nodebird/package.json
+++ b/practice-nodebird/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
@@ -16,6 +17,9 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "nunjucks": "^3.2.1",
+    "passport": "^0.7.0",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1"
   },
