--- a/practice-nodebird/package.json
+++ b/practice-nodebird/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nunjucks": "^3.2.1",
     "passport": "^0.7.0",
